<resources>
    <string name="name_controll_center">智慧教室控制中心</string>
    <string name="name_app_name">智慧教室</string>
    <string name="name_app_function">控制中心</string>
    <string name="name_continue">继续</string>
    <string name="name_start">开始</string>
    <string name="name_stop">停止</string>
    <string name="name_resume">恢复</string>
    <string name="name_pause">暂停</string>
    <string name="name_wakeup">唤醒</string>
    <string name="name_account">账号</string>
    <string name="name_please_account">请输入账号</string>
    <string name="name_please_password">请输入密码</string>
    <string name="name_password">密码</string>
    <string name="name_controll">控制</string>
    <string name="name_mainpage">首页</string>
    <string name="opt_login_account">账号登录</string>
    <string name="name_login">登录</string>
    <string name="name_turn_on_all">全开</string>
    <string name="name_turn_off_all">全关</string>
    <string name="name_pause_all">全停</string>
    <string name="onekey_class_on">一键上课</string>
    <string name="onekey_class_over">一键下课</string>
    <string name="tipes_no_envirment">没有环控数据</string>
    <string name="name_media">多媒体设备</string>
    <string name="select_all">全选</string>
    <string name="clear_all">全清</string>
    <string name="device_select">控制</string>
    <string name="common_control">统一控制</string>
    <string name="name_mode">模式</string>
    <string name="setting_aircondtioner_cold">制冷</string>
    <string name="setting_aircondtioner_heat">制热</string>
    <string name="setting_aircondtioner_wind">送风</string>
    <string name="setting_aircondtioner_dehumidification">除湿</string>
    <string name="setting_auto">自动</string>
    <string name="already_closed">已关闭</string>
    <string name="already_opened">已开启</string>
    <string name="tips_swip_enter">直接刷卡进入</string>
    <string name="tipse_scan_qrcode">扫描二维码进入</string>
    <string name="tipse_scan_ic_card">找到磁卡,可直接刷卡进入</string>
    <string name="login_success">登录成功!!</string>
    <string name="switch_language">EN</string>
    <string name="report_fault">设备\n报障</string>
    <string name="fault_description">故障描述:</string>
    <string name="unknow_content">未知内容</string>
    <string name="name_setting">设置</string>
    <string name="name_muiltiple">多人</string>
    <string name="name_singleton">单人</string>
    <string name="name_broadcast_all">全部广播</string>
    <string name="name_broadcast_part">部分广播</string>
    <string name="name_finish">结束</string>
    <string name="name_mark">标注</string>
    <string name="name_white_board">白板</string>
    <string name="name_file">文件</string>
    <string name="name_lock">锁定</string>
    <string name="name_volumn">音量</string>
    <string name="name_status_unlock">解锁</string>
    <string name="name_status_lock">锁定</string>
    <string name="name_shown_mode">展示模式</string>
    <string name="name_broadcast_mode">广播模式</string>
    <string name="name_opt_open">开启</string>
    <string name="name_opt_close">关闭</string>
    <string name="name_airconditioner_heat">制热</string>
    <string name="name_airconditioner_cold">制冷</string>
    <string name="name_airconditioner_fan">送风</string>
    <string name="name_airconditioner_xeransis">除湿</string>
    <string name="name_airconditioner_auto">自动</string>
    <string name="name_airconditioner_mode_setting">模式设定</string>
    <string name="name_classroom_detect">教室环境监测</string>
    <string name="name_interactive_mode">信号源切换</string>
    <string name="name_front_hdml">前置HDMI</string>
    <string name="name_front_vga">前置VGA</string>
    <string name="name_behide_hdmi">后置hdmi</string>
    <string name="name_behide_vga">后置vga</string>
    <string name="name_inside_pc">内置PC</string>
    <string name="name_freshair_auto">自动</string>
    <string name="name_freshair_low">低</string>
    <string name="name_freshair_middle">中</string>
    <string name="name_freshair_high">高</string>
    <string name="name_door_magnetic">门磁</string>
    <string name="name_door_lock">门锁</string>
    <string name="name_lecture_mode">讲座模式</string>
    <string name="name_talking_mode">讨论模式</string>
    <string name="name_display_mode">显示控制</string>
    <string name="name_conference">远程互动</string>
    <string name="tipes_please_select_lecture">请选择信号源</string>
    <string name="tipse_please_select_output">请选择显示器</string>
    <string name="name_common_setting">统一设置</string>
    <string name="name_device_scene">场景控制</string>
    <string name="name_matrix_scene">矩阵控制场景</string>
    <string name="name_device_controll">设备控制</string>
    <string name="name_volumn_setting">音量设定</string>
    <string name="tipe_classover_cause">本次操作将会关闭大部分设备,确认要下课吗？</string>
    <string name="device_closing">设备正在关闭中....</string>
    <string name="device_starting">设备正在开启中,请稍候..</string>
    <string name="text_opened">开</string>
    <string name="text_closed">关</string>
    <string name="name_platform_ip">平台地址:</string>
    <string name="name_platform_port">平台端口:</string>
    <string name="name_ip">本地IP:</string>
    <string name="name_dns1">dns1:</string>
    <string name="name_dns2">dns2:</string>
    <string name="name_gateway">网关:</string>
    <string name="name_netmask">netmask:</string>
    <string name="name_enbale">启用</string>
    <string name="name_disable">停用</string>
    <string name="name_quit_app">退出APP</string>
    <string name="name_class_controll">上下课</string>
    <string name="name_quick_device_controll">快捷控制</string>
    <string name="name_version3_media">多媒体控制</string>
    <string name="name_version3_envirment">环控控制</string>
    <string name="name_version3_record">录播控制</string>
    <string name="name_version3_matrix">矩阵控制</string>
    <string name="name_globle_controll">全局控制</string>
    <string name="name_tempture">温度</string>
    <string name="tipes_unknow_tipes">提示！！</string>
    <string name="tipes_network_disconnected">网络开小差了,正在努力重连中！</string>
    <string name="tipes_device_rate">设备使用评价</string>
    <string name="tipes_rate_timeless_dismiss">秒后自动关闭</string>
    <string name="tipes_rate_unselect_level">未选择评价等级！！</string>
    <string name="name_excellent">优</string>
    <string name="name_good">良</string>
    <string name="name_average">一般</string>
    <string name="name_poor">差</string>

    <string name="name_control_center_signal_source">中控信号源</string>
    <string name="name_function">功能</string>
    <string name="name_video_source">信号源</string>
    <string name="scan_qr_code_tips">扫码成功。\n点击刷新。</string>
    <string name="register_panel_first">请先注册\n面板</string>
    <string name="qr_code_refreshed_scan_code_again">二维码已刷新，请重新扫码登录。</string>
    <string name="channel_name">编辑通道名称</string>
    <string name="input_channel_name">请输入通道名称</string>
    
    <string name="up">上升</string>
    <string name="pause">暂停</string>
    <string name="down">下降</string>
    <string name="environmental_equipment_failure">环境设备故障</string>
    <string name="multimedia_device_failure">多媒体设备故障</string>
    <string name="audio_device_failure">音频设备故障</string>
    <string name="equipment_circuit_failure">设备线路故障</string>
    <string name="other_equipment_issues">其他设备问题</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="submit">提交</string>
</resources>
