<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class="InteractiveControllItem">

        <import type="com.sunmnet.mediaroom.device.bean.Interactive" />

        <variable
            name="dev"
            type="Interactive" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/px_30"
            android:paddingTop="@dimen/px_15"
            android:paddingRight="@dimen/px_30"
            android:paddingBottom="@dimen/px_15">

            <TextView
                android:id="@id/device_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{dev.getDeviceName()}"
                android:textColor="?colorPrimary"
                android:textSize="?common_menu_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/airconditioner_opt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@id/single_open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_forward_effect"
                    android:paddingLeft="@dimen/px_45"
                    android:paddingTop="@dimen/px_15"
                    android:paddingRight="@dimen/px_45"
                    android:paddingBottom="@dimen/px_15"
                    android:text="@string/name_opt_open"
                    android:textSize="?common_menu_text_size" />

                <Button
                    android:id="@id/single_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/px_30"
                    android:background="@drawable/btn_reverse_effective"
                    android:paddingLeft="@dimen/px_45"
                    android:paddingTop="@dimen/px_15"
                    android:paddingRight="@dimen/px_45"
                    android:paddingBottom="@dimen/px_15"
                    android:text="@string/name_opt_close"
                    android:textSize="?common_menu_text_size" />
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/px_30"
            android:paddingTop="@dimen/px_15"
            android:paddingRight="@dimen/px_30"
            android:paddingBottom="@dimen/px_15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_mode"
                android:textColor="?colorPrimary"
                android:textSize="?common_menu_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@id/modes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </LinearLayout>
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>
</layout>
